--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,3 @@
-/* Empty. Add your own CSS if you like */
 #imagem{
 	width: 300px;
 	height: 300px;
@@ -14,5 +13,35 @@
 }
 
 .clearLink{
+	text-decoration: none;
+}
+
+.style-4 input[type="text"] {
+  padding: 10px;
+  border: none;
+  border-bottom: solid 2px #c9c9c9;
+  transition: border 0.3s;
+}
+.style-4 input[type="text"]:focus,
+.style-4 input[type="text"].focus {
+  border-bottom: solid 2px #969696;
+}
+
+.input-index{
+	background-color: transparent;
+}
+
+.label-index{
+	background-color: rgb(159,231,231);
+	border: 0px;
+	border-bottom: 1px solid white;
+}
+
+.label-index input{
+	color: white;
+}
+
+a{
+	color: white;
 	text-decoration: none;
 }
