--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,18 @@
+::-webkit-input-placeholder {
+   color: red;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: red;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: red;  
+}
+
+:-ms-input-placeholder {  
+   color: red;  
+}
 #imagem{
 	width: 300px;
 	height: 300px;
@@ -8,7 +23,7 @@
 	padding: 5px;
 }
 
-.login{
+.bg{
 	background-color: #9fc3e7;
 }
 
@@ -35,6 +50,7 @@
 	background-color: rgb(159,231,231);
 	border: 0px;
 	border-bottom: 1px solid white;
+	margin-bottom: 10px;
 }
 
 .label-index input{
