--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,6 +13,7 @@
 :-ms-input-placeholder {  
    color: red;  
 }
+
 #imagem{
 	width: 300px;
 	height: 300px;
@@ -24,30 +25,16 @@
 }
 
 .bg{
-	background-color: #9fc3e7;
+	background-image: url("../img/bg-azul.jpg");
+	background-size:100% 100%;
 }
 
 .clearLink{
 	text-decoration: none;
 }
 
-.style-4 input[type="text"] {
-  padding: 10px;
-  border: none;
-  border-bottom: solid 2px #c9c9c9;
-  transition: border 0.3s;
-}
-.style-4 input[type="text"]:focus,
-.style-4 input[type="text"].focus {
-  border-bottom: solid 2px #969696;
-}
-
-.input-index{
-	background-color: transparent;
-}
-
 .label-index{
-	background-color: rgb(159,231,231);
+	background-color: rgb(73,122,171);
 	border: 0px;
 	border-bottom: 1px solid white;
 	margin-bottom: 10px;
@@ -55,6 +42,15 @@
 
 .label-index input{
 	color: white;
+}
+
+.buttons{
+	background-color: rgb(255, 191, 37);
+}
+
+.bar-royal{
+	background-color: rgb(56 ,115 ,173)!important;
+	border: 0 !important;
 }
 
 a{
