--- a/www/views/cartao_historico.html
+++ b/www/views/cartao_historico.html
@@ -14,16 +14,15 @@
         <p>
           Bebida: {{ drink }} <br>
           Bar:  {{ bar }}<br>
-          Doses restantes: {{ detalhe.remaining_doses}}/{{total_doses }} <br>
-          Vencimento: {{ vencimento | date:'dd/MM/yyyy' }} <br>
-          Atualizado em: {{detalhe.updated_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
-          Criado: {{detalhe.created_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
+          Doses restantes: {{ cartao.remaining_doses}}/{{total_doses }} <br>
+          Atualizado em: {{cartao.updated_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
+          Criado: {{cartao.created_at | date:'dd/MM/yyyy HH:mm:ss'}}<br>
           <div class="row">
             <div class="col">
-              <img ng-src="{{detalhe.image_drink.url}}" width="100%" ng-click="openModal(1)">
+              <img ng-src="{{cartao.image_drink.url}}" width="100%" ng-click="openModal(1)">
             </div>
             <div class='col'>
-              <img ng-src="{{detalhe.image_card.url}}" width="100%" ng-click="openModal(2)">
+              <img ng-src="{{cartao.image_card.url}}" width="100%" ng-click="openModal(2)">
             </div>
           </div> 
         </p>
