correcao do back do bar

--- a/www/views/bar_msg.html
+++ b/www/views/bar_msg.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Mensagens" ng-controller="Chat">
-  <ion-nav-bar class="bar-royal" ng-controller="Back">
+  <ion-nav-bar class="bar-royal">
     <ion-nav-buttons side="left">
       <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
         <i class="ion-chevron-left"></i> Voltar
