--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -15,12 +15,15 @@
       </li>
     </ul>
   </ion-content>
-
-  <div class="messages-bottom">
+  <ion-footer-bar>
+   <div class="messages-bottom">
       <div class="textarea">
         <textarea ng-model="text"></textarea>
       </div>
       <i class="icon ion-paper-airplane" ng-click="send()"></i>
   </div>
+</ion-footer-bar>
+
+ 
 
 </ion-view>
