APP20 - clube a expirar

--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -18,7 +18,7 @@
 
   <div class="messages-bottom">
       <div class="textarea">
-        <textarea ng-model="text"></textarea>
+        <textarea ng-model="text" id="message"></textarea>
       </div>
       <i class="icon ion-paper-airplane" ng-click="send()"></i>
   </div>
