--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,7 +19,7 @@
 }
 
 .bg{
-	background-image: url("../img/bg-azul.jpg");
+	background-color: rgb(255, 191, 37)!important;
 	background-size:100% 100%;
 }
 
@@ -28,30 +28,38 @@
 }
 
 .label-index{
-	background-color: rgb(73,122,171);
+	/*background-color: rgb(73,122,171);*/
+  background-color: rgb(250,250,250);
 	border: 0px;
 	border-bottom: 1px solid white;
 	margin-bottom: 10px;
 }
 
+.label-index::-webkit-input-placeholder {
+  color: red;
+  width: 250px;
+}
+
 .label-index input{
-	color: white;
+	color: black;
 }
 
 .button-event{
-	background-color: rgb(255, 191, 37)!important;
-	color: white;
-	border: 0;
+  background-color: rgb(56 ,115 ,173)!important;
+  border: 0 !important;
 }
 
 .bar-royal{
-	background-color: rgb(56 ,115 ,173)!important;
-	border: 0 !important;
+	
+  background-color: rgb(255, 191, 37)!important;
+  color: white;
+  border: 0;
 }
 
 ul a{
-	background-color: rgb(56 ,115 ,173)!important;
-	color: white!important;
+	/*background-color: rgb(56 ,115 ,173)!important;*/
+  background-color: rgb(5255 ,191 ,37)!important;
+	color: black !important;
 }
 
 a{
