--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,6 +23,20 @@
 	background-size:100% 100%;
 }
 
+.itemMenu {
+    border-color: #ddd;
+    background-color: #fff !important;
+    color: #444 !important;
+    position: relative;
+    z-index: 2;
+    display: block;
+    margin: -1px;
+    padding: 16px;
+    border-width: 1px;
+    border-style: solid;
+    font-size: 16px;
+}
+
 .clearLink{
 	text-decoration: none;
 }
