--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -8,19 +8,22 @@
   </ion-nav-bar>
 
   <ion-content class="messages-chat" class="has-header">
-    <ul>
-      <li ng-repeat="message in messages">
-        <label>{{ message.from }}</label>
-        <p>{{ message.text }}</p>
-      </li>
-    </ul>
+    <ion-scroll class="messages-scroll">
+      <ul>
+        <li ng-repeat="message in messages">
+          <label>{{ message.from }}</label>
+          <p>{{ message.text }}</p>
+        </li>
+      </ul>
+    </ion-scroll>
+    <div class="messages-bottom">
+        <div class="textarea">
+          <textarea ng-model="text" id="message"></textarea>
+        </div>
+        <i class="icon ion-paper-airplane" ng-click="send()"></i>
+    </div>
   </ion-content>
 
-  <div class="messages-bottom">
-      <div class="textarea">
-        <textarea ng-model="text" id="message"></textarea>
-      </div>
-      <i class="icon ion-paper-airplane" ng-click="send()"></i>
-  </div>
+
 
 </ion-view>
