usando o mesmo layout de usuario x amigo para usuario x bar.

--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Mensagens" ng-controller="Messages">
+
   <ion-nav-bar class="bar-royal" ng-controller="Back">
     <ion-nav-buttons side="left">
       <button class="button back-button buttons button-clear header-item" ng-click="myGoBack()">
@@ -7,23 +8,22 @@
     </ion-nav-buttons>
   </ion-nav-bar>
 
-  <ion-content class="messages-chat" class="has-header">
-    <ion-scroll class="messages-scroll">
-      <ul>
-        <li ng-repeat="message in messages">
-          <label>{{ message.from }}</label>
-          <p>{{ message.text }}</p>
-        </li>
-      </ul>
-    </ion-scroll>
-    <div class="messages-bottom">
-        <div class="textarea">
-          <textarea ng-model="text" id="message"></textarea>
-        </div>
-        <i class="icon ion-paper-airplane" ng-click="send()"></i>
-    </div>
+
+  <div>
+  <ion-content padding="true" class="has-header">
+    <ul class="list">
+      <li class="item" ng-repeat="message in messages">
+        <label>  {{ message.from }}</label>
+        <div ng-class="message.class">{{ message.text }}</div>
+      </li>
+    </ul>
+    <p>&nbsp;</p>
   </ion-content>
-
-
-
+  <div class="messages-bottom" ng-controller="Chat"  keyboard-attach='true'  >
+    <div class="textarea">
+      <textarea id="message"></textarea>
+    </div>
+    <i class="icon ion-paper-airplane" ng-click="send()"></i>
+  </div>
+</div>
 </ion-view>
