correções de pequenos bugs nos controllers dos chats e push usuar x usuario feito.

--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -19,7 +19,7 @@
     </ul>
     <p>&nbsp;</p>
   </ion-content>
-  <div class="messages-bottom" ng-controller="Chat"  keyboard-attach='true'  >
+  <div class="messages-bottom"  keyboard-attach='true'  >
     <div class="textarea">
       <textarea id="message"></textarea>
     </div>
