scroll bottom adicionado no chat usuario x bar.

--- a/www/views/messages.html
+++ b/www/views/messages.html
@@ -23,7 +23,7 @@
     <div class="textarea">
       <textarea id="message"></textarea>
     </div>
-    <button onclick="sendUserBarMessage()"><i class="icon ion-paper-airplane" ></i> </button>
+    <button ng-click="sendUserBarMessage()"><i class="icon ion-paper-airplane" ></i> </button>
   </div>
 </div>
 </ion-view>
